chore: refactor OpenLibrary client and download job to improve logging, error handling, and validation